@@ -1570,6 +1570,8 @@
 		05C265B8282C948700232420 /* facetpairing8.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 05C265AB282C947C00232420 /* facetpairing8.cpp */; };
 		05C265B9282C948700232420 /* facetpairing4.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 05C265A5282C947B00232420 /* facetpairing4.cpp */; };
 		05C265C228307D0600232420 /* facetpairing-canonical-impl.h in Headers */ = {isa = PBXBuildFile; fileRef = 05C265C128307D0500232420 /* facetpairing-canonical-impl.h */; };
+		05C7A5C92DF7D9BA00CD4551 /* affineindex.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 05C7A5C82DF7D9BA00CD4551 /* affineindex.cpp */; };
+		05C7A5CA2DF7D9BA00CD4551 /* affineindex.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 05C7A5C82DF7D9BA00CD4551 /* affineindex.cpp */; };
 		05CAE6012741C871007C93F3 /* validityconstraints.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 05CAE6002741C871007C93F3 /* validityconstraints.cpp */; };
 		05CAE60527427A8A007C93F3 /* ordering.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 05CAE60327427A8A007C93F3 /* ordering.cpp */; };
 		05CAE60727427A8A007C93F3 /* maxadmissible.cpp in Sources */ = {isa = PBXBuildFile; fileRef = 05CAE60427427A8A007C93F3 /* maxadmissible.cpp */; };
@@ -4312,6 +4314,7 @@
 		05C265B1282C947D00232420 /* facetpairing14.cpp */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.cpp.cpp; path = facetpairing14.cpp; sourceTree = "<group>"; };
 		05C265B2282C947D00232420 /* facetpairing7.cpp */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.cpp.cpp; path = facetpairing7.cpp; sourceTree = "<group>"; };
 		05C265C128307D0500232420 /* facetpairing-canonical-impl.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = "facetpairing-canonical-impl.h"; sourceTree = "<group>"; };
+		05C7A5C82DF7D9BA00CD4551 /* affineindex.cpp */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.cpp.cpp; path = affineindex.cpp; sourceTree = "<group>"; };
 		05CAE6002741C871007C93F3 /* validityconstraints.cpp */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.cpp; path = validityconstraints.cpp; sourceTree = "<group>"; };
 		05CAE60327427A8A007C93F3 /* ordering.cpp */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.cpp; path = ordering.cpp; sourceTree = "<group>"; };
 		05CAE60427427A8A007C93F3 /* maxadmissible.cpp */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.cpp.cpp; path = maxadmissible.cpp; sourceTree = "<group>"; };
@@ -7890,6 +7893,7 @@
 			children = (
 				05721ED01F97153C00A83FFC /* CMakeLists.txt */,
 				05BF6FD12DB0116A0093D7A2 /* alexander.cpp */,
+				05C7A5C82DF7D9BA00CD4551 /* affineindex.cpp */,
 				0568742020C5D868001C435B /* algebra.cpp */,
 				051CBE822DE561370019D73D /* arrow.cpp */,
 				0529AB8E2DEF98CF00F02D9C /* complement.cpp */,
@@ -9972,6 +9976,7 @@
 				0553FAB12AEBE3C000BE89A7 /* boundary2.cpp in Sources */,
 				0553FAE52AEBE6B500BE89A7 /* census.cpp in Sources */,
 				0553FB3E2AEBE74B00BE89A7 /* transform.cpp in Sources */,
+				05C7A5CA2DF7D9BA00CD4551 /* affineindex.cpp in Sources */,
 				0553FB5D2AEBE7D400BE89A7 /* cusps.cpp in Sources */,
 				0553FA7E2AEBE36E00BE89A7 /* xmlreader.cpp in Sources */,
 				05A628152AE9214A0049739E /* perm7.cpp in Sources */,
@@ -10459,6 +10464,7 @@
 				05B7FFC725AC22D3003BAF5C /* HilbertSeries.cpp in Sources */,
 				0518B99B29D594030020ADC1 /* canonize_part_1.cpp in Sources */,
 				0541AF4B1B8BE2F5002E166B /* cyclotomic.cpp in Sources */,
+				05C7A5C92DF7D9BA00CD4551 /* affineindex.cpp in Sources */,
 				054208841DF0D0B50018AB24 /* state.cpp in Sources */,
 				059802ED26683C6D002D5D57 /* xmlcallback.cpp in Sources */,
 				059493072920B1C300940F0D /* permgroup.cpp in Sources */,
